# os2mo-smtp

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init.config.yml  mypy.ini  pyproject.toml  queries.graphql  schema.graphql
.reuse/: dep5
dev-environment/: mo_smtp.env
mo_smtp/: agents.py  app.py  config.py  dataloaders.py  depends.py  helpers.py  mail.py  models.py  send_email.py  smtp_agent.py
mo_smtp/autogenerated_graphql_client/: __init__.py  _testing__create_address.py  _testing__create_class.py  _testing__create_employee.py  _testing__create_engagement.py  _testing__create_it_system.py  _testing__create_it_user.py  _testing__create_manager.py  _testing__create_org_unit.py  _testing__create_org_unit_address.py  _testing__create_org_unit_root.py  _testing__create_related_units.py  _testing__create_rolebinding.py  _testing__get_email_address_type.py  _testing__get_engagement_type.py  _testing__get_job_function.py  _testing__get_manager_level.py  _testing__get_manager_responsibility.py  _testing__get_manager_type.py  _testing__get_org_unit_address_type.py  _testing__get_org_unit_type.py  _testing__get_phone_address_type.py  _testing__get_related_units_for_org_unit.py  _testing__get_role_facet.py  _testing__get_role_type.py  _testing__terminate_manager.py  _testing__terminate_org_unit.py  _testing__update_manager.py  address_data.py  async_base_client.py  base_model.py  client.py  employee_data.py  employee_name.py  enums.py  exceptions.py  get_address_data.py  get_institution_address.py  get_manager.py  get_manager_data.py  (+20 more)
mo_smtp/email_templates/: alert_on_manager_termination.html  alert_on_rolebinding.html  alert_on_vacant_manager.html
mo_smtp/utils/: email_builders.py
tests/: conftest.py  test_agents.py  test_dataloader.py  test_dummy.py  test_helpers.py  test_mail.py  test_nothing.py  test_send_email.py  test_smtp_agent.py
tests/integration/: conftest.py  test_address_creation.py  test_ituser_rolebinding.py  test_manager_removal.py  test_related_units.py  test_relation_alert.py
